--- a/.github/workflows/version-management.yml
+++ b/.github/workflows/version-management.yml
@@ -10,8 +10,80 @@ permissions:
   pull-requests: read
 
 jobs:
+  branch-validation:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Validate Branch Naming Convention
+        run: |
+          echo "🔍 Validating branch naming convention: ${{ github.head_ref }}"
+          BRANCH_NAME="${{ github.head_ref }}"
+          
+          # Define allowed branch prefixes and their purposes
+          MILESTONE_PATTERN="^feat/v[0-9]+\.[0-9]+\.[0-9]+[^/]*-.*"
+          FIX_PATTERN="^fix/[a-z0-9-]+$"
+          HOTFIX_PATTERN="^hotfix/[a-z0-9-]+$"
+          DOCS_PATTERN="^docs/[a-z0-9-]+$"
+          CHORE_PATTERN="^chore/[a-z0-9-]+$"
+          CI_PATTERN="^ci/[a-z0-9-]+$"
+          STYLE_PATTERN="^style/[a-z0-9-]+$"
+          REFACTOR_PATTERN="^refactor/[a-z0-9-]+$"
+          TEST_PATTERN="^test/[a-z0-9-]+$"
+          PERF_PATTERN="^perf/[a-z0-9-]+$"
+          
+          # Check if branch matches any allowed pattern
+          if [[ "$BRANCH_NAME" =~ $MILESTONE_PATTERN ]]; then
+            echo "✅ Valid milestone feature branch: $BRANCH_NAME"
+            echo "branch-type=milestone" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $FIX_PATTERN ]]; then
+            echo "✅ Valid fix branch: $BRANCH_NAME"
+            echo "branch-type=fix" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $HOTFIX_PATTERN ]]; then
+            echo "✅ Valid hotfix branch: $BRANCH_NAME"
+            echo "branch-type=hotfix" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $DOCS_PATTERN ]]; then
+            echo "✅ Valid documentation branch: $BRANCH_NAME"
+            echo "branch-type=docs" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $CHORE_PATTERN ]]; then
+            echo "✅ Valid chore branch: $BRANCH_NAME"
+            echo "branch-type=chore" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $CI_PATTERN ]]; then
+            echo "✅ Valid CI branch: $BRANCH_NAME"
+            echo "branch-type=ci" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $STYLE_PATTERN ]]; then
+            echo "✅ Valid style branch: $BRANCH_NAME"
+            echo "branch-type=style" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $REFACTOR_PATTERN ]]; then
+            echo "✅ Valid refactor branch: $BRANCH_NAME"
+            echo "branch-type=refactor" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $TEST_PATTERN ]]; then
+            echo "✅ Valid test branch: $BRANCH_NAME"
+            echo "branch-type=test" >> $GITHUB_ENV
+          elif [[ "$BRANCH_NAME" =~ $PERF_PATTERN ]]; then
+            echo "✅ Valid performance branch: $BRANCH_NAME"
+            echo "branch-type=perf" >> $GITHUB_ENV
+          else
+            echo "❌ Invalid branch naming convention: $BRANCH_NAME"
+            echo ""
+            echo "📋 Allowed branch naming patterns:"
+            echo "   feat/v0.3.0-alpha-component-name  (milestone features)"
+            echo "   fix/timeline-scrolling-bug        (bug fixes)"
+            echo "   hotfix/critical-security-patch    (urgent fixes)"
+            echo "   docs/update-readme                (documentation)"
+            echo "   chore/update-dependencies          (maintenance)"
+            echo "   ci/fix-build-pipeline              (CI/CD changes)"
+            echo "   style/format-components            (code formatting)"
+            echo "   refactor/cleanup-services          (code refactoring)"
+            echo "   test/add-unit-tests                (testing)"
+            echo "   perf/optimize-rendering            (performance)"
+            echo ""
+            echo "ℹ️  Branch names must use lowercase letters, numbers, and hyphens only"
+            exit 1
+          fi
+
   pr-title-validation:
     runs-on: ubuntu-latest
+    needs: branch-validation
     if: github.event_name == 'pull_request'
     steps:
       - name: Validate PR Title Format
@@ -57,6 +129,8 @@ jobs:
 
   version-check:
     runs-on: ubuntu-latest
+    needs: branch-validation
+    if: github.event_name == 'pull_request' && startsWith(github.head_ref, 'feat/v')
     steps:
       - uses: actions/checkout@v4
         with:
@@ -120,6 +194,8 @@ jobs:
 
   milestone-validation:
     runs-on: ubuntu-latest
+    needs: branch-validation
+    if: github.event_name == 'pull_request' && startsWith(github.head_ref, 'feat/v')
     steps:
       - uses: actions/checkout@v4
       
